fix(ci): install Node dependencies before building in CI mode
The node:build:ci task was failing because it ran pnpm exec without
first installing dependencies. In CI on cache miss, there's no
node_modules directory, causing the @napi-rs/cli module to be missing.

Added corepack enable and pnpm install -r before the build commands.

--- a/.task/languages/node.yml
+++ b/.task/languages/node.yml
@@ -43,6 +43,8 @@ tasks:
     desc: Build Node/TypeScript native bindings in CI mode (with debug info)
     dir: crates/kreuzberg-node
     cmds:
+      - corepack enable
+      - pnpm install -r
       - pnpm exec napi build --platform --release
       - pnpm exec tsup
 
