--- a/.task/languages/python.yml
+++ b/.task/languages/python.yml
@@ -68,6 +68,8 @@ tasks:
   test:
     desc: Run Python tests
     dir: packages/python
+    env:
+      ORT_DYLIB_PATH: /opt/homebrew/lib/libonnxruntime.dylib
     cmds:
       - uv run pytest
 
@@ -76,12 +78,15 @@ tasks:
     dir: packages/python
     env:
       RUST_BACKTRACE: '1'
+      ORT_DYLIB_PATH: /opt/homebrew/lib/libonnxruntime.dylib
     cmds:
       - uv run pytest --cov --cov-report=html -vv -s --tb=long --log-cli-level=DEBUG
 
   test:coverage:
     desc: Run Python tests with coverage report
     dir: packages/python
+    env:
+      ORT_DYLIB_PATH: /opt/homebrew/lib/libonnxruntime.dylib
     cmds:
       - uv run pytest --cov --cov-report=html
 
