fix(tests): add ORT_DYLIB_PATH to Go and C# test configurations
- Add ORT_DYLIB_PATH environment variable to Go test tasks to prevent ONNX Runtime crashes
- Add ORT_DYLIB_PATH to C# test tasks for consistency
- Fixes 'signal: killed' errors in Go tests
- PHP already has ORT_DYLIB_PATH in phpunit.xml.dist from previous work

--- a/.task/languages/csharp.yml
+++ b/.task/languages/csharp.yml
@@ -63,6 +63,8 @@ tasks:
 
   test:
     desc: Run C# tests
+    env:
+      ORT_DYLIB_PATH: /opt/homebrew/lib/libonnxruntime.dylib
     cmds:
       - cmd: bash scripts/csharp/test.sh
         platforms: [linux, darwin]
@@ -73,6 +75,7 @@ tasks:
     desc: Run C# tests in CI mode
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: "true"
+      ORT_DYLIB_PATH: /opt/homebrew/lib/libonnxruntime.dylib
     cmds:
       - cmd: bash scripts/csharp/test.sh
         platforms: [linux, darwin]
