fix(ci): resolve Ruby e2e test failures and benchmark/tesseract issues
Fix three CI failures on main branch:

1. Ruby E2E tests - Set BUNDLE_GEMFILE for e2e test execution
   - Tests failed with NoMethodError when config/metadata methods returned nil
   - Root cause: e2e tests ran without proper Gemfile context, causing FFI
     extension to load incorrectly from system gems
   - Solution: Explicitly set BUNDLE_GEMFILE to packages/ruby/Gemfile when
     running e2e tests from e2e/ruby directory

2. Benchmark script - Fix incorrect API method call
   - Called non-existent Kreuzberg.batch_extract_file() method
   - Changed to correct API: Kreuzberg.batch_extract_files_sync(paths:)

3. Windows Tesseract - Download tessdata files during installation
   - Script checked for tessdata but never downloaded the files
   - Added actual download of eng.traineddata and osd.traineddata from
     tesseract-ocr/tessdata_fast repository

All 65 Ruby e2e tests now pass locally.

--- a/.task/languages/ruby.yml
+++ b/.task/languages/ruby.yml
@@ -147,14 +147,14 @@ tasks:
     desc: Run Ruby E2E tests
     dir: e2e/ruby
     cmds:
-      - "{{.BUNDLE}} exec rspec"
+      - BUNDLE_GEMFILE="../../packages/ruby/Gemfile" {{.BUNDLE}} exec rspec
 
   e2e:lint:
     desc: Lint Ruby E2E code
     dir: e2e/ruby
     cmds:
-      - "{{.BUNDLE}} exec rubocop --config .rubocop.yml"
-      - "{{.BUNDLE}} exec steep check"
+      - BUNDLE_GEMFILE="../../packages/ruby/Gemfile" {{.BUNDLE}} exec rubocop --config .rubocop.yml
+      - BUNDLE_GEMFILE="../../packages/ruby/Gemfile" {{.BUNDLE}} exec steep check
 
   e2e:verify:
     desc: Regenerate and validate Ruby E2E suite (generate + lint + test)
