chore: clean up RC version references in docs and workflows
Replace 4.0.0-rc.X references with 4.3.6 across workflow files,
test app documentation, and migration guides.

--- a/docs/migration/v4.0-fonts.md
+++ b/docs/migration/v4.0-fonts.md
@@ -40,10 +40,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```rust
     use kreuzberg::ExtractionConfig;
 
-    // Previous (v4.0-rc1) - no font configuration
+    // Previous (v4.0) - no font configuration
     let config = ExtractionConfig::default();
 
-    // Current (v4.0-rc2) - same code, now with font provider enabled
+    // Current (v4.0) - same code, now with font provider enabled
     let config = ExtractionConfig::default();
     // Font provider automatically enabled with system fonts
     ```
@@ -53,10 +53,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```python
     from kreuzberg import ExtractionConfig
 
-    # Previous (v4.0-rc1)
+    # Previous (v4.0)
     config = ExtractionConfig()
 
-    # Current (v4.0-rc2) - same code, now with font provider enabled
+    # Current (v4.0) - same code, now with font provider enabled
     config = ExtractionConfig()
     # Font provider automatically enabled with system fonts
     ```
@@ -66,10 +66,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```typescript
     import { ExtractionConfig } from 'kreuzberg';
 
-    // Previous (v4.0-rc1)
+    // Previous (v4.0)
     const config: ExtractionConfig = {};
 
-    // Current (v4.0-rc2) - same code, now with font provider enabled
+    // Current (v4.0) - same code, now with font provider enabled
     const config: ExtractionConfig = {};
     // Font provider automatically enabled with system fonts
     ```
@@ -79,10 +79,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```java
     import dev.kreuzberg.config.*;
 
-    // Previous (v4.0-rc1)
+    // Previous (v4.0)
     ExtractionConfig config = ExtractionConfig.builder().build();
 
-    // Current (v4.0-rc2) - same code, now with font provider enabled
+    // Current (v4.0) - same code, now with font provider enabled
     ExtractionConfig config = ExtractionConfig.builder().build();
     // Font provider automatically enabled with system fonts
     ```
@@ -92,10 +92,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```go
     import "github.com/kreuzberg-dev/kreuzberg/v4"
 
-    // Previous (v4.0-rc1)
+    // Previous (v4.0)
     config := &kreuzberg.ExtractionConfig{}
 
-    // Current (v4.0-rc2) - same code, now with font provider enabled
+    // Current (v4.0) - same code, now with font provider enabled
     config := &kreuzberg.ExtractionConfig{}
     // Font provider automatically enabled with system fonts
     ```
@@ -105,10 +105,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```ruby
     require 'kreuzberg'
 
-    # Previous (v4.0-rc1)
+    # Previous (v4.0)
     config = Kreuzberg::ExtractionConfig.new
 
-    # Current (v4.0-rc2) - same code, now with font provider enabled
+    # Current (v4.0) - same code, now with font provider enabled
     config = Kreuzberg::ExtractionConfig.new
     # Font provider automatically enabled with system fonts
     ```
@@ -118,10 +118,10 @@ For most users, no changes needed. Default behavior provides performance improve
     ```csharp
     using Kreuzberg;
 
-    // Previous (v4.0-rc1)
+    // Previous (v4.0)
     var config = new ExtractionConfig();
 
-    // Current (v4.0-rc2) - same code, now with font provider enabled
+    // Current (v4.0) - same code, now with font provider enabled
     var config = new ExtractionConfig();
     // Font provider automatically enabled with system fonts
     ```
